SOLR-13821: Package Store